test/spec_vectors/table/ok/module_0.wat
(module (table 0 funcref))