test/spec_vectors/table/fail/module_24.wat
(module (elem (i32.const 0) $f) (func $f))